Add Hook Support (#11)
* Remove non-formatted files from after

* Use --output for make test

* Send formatted output to a new folder and use it for diff-ing

* Tests should fail if diff is not empty

* Sort makefile targets

* Specify expected comments

* Capture and recover comments

* Add records with comments

* Add hook support

* Add tests for different configs

* Remove todo

--- a/test_app/rebar.config
+++ b/test_app/rebar.config
@@ -19,3 +19,8 @@
 {plugins, [{rebar3_format, {git, "git@github.com:SemanticSugar/rebar3_format.git", {branch, "master"}}}]}.
 
 {format, [{dummy, option}]}.
+
+{profiles, [{format_config, [{format, [
+    {ribbon, 65},
+    {paper, 80}
+]}]}]}.
