Adding dialyzer opts to rebar.config and adding 'make dialyzer'. (#24)
* Adding dialyzer opts to rebar.config and adding 'make dialyzer'.

* [#21] Removing unneeded 'base_plt_apps' and adding xref (config + make).

* Adding 'xref' to .PHONY.

* Fixing dializer warnings.

* Remove xref since it won't work anyway

* iodata() includes string()

* Improve code a bit

* Fix type

* Add dialyzer as a precondition for tests

--- a/rebar.config
+++ b/rebar.config
@@ -17,3 +17,13 @@
 {deps, []}.
 
 {plugins, [rebar3_lint, rebar3_hex]}.
+
+{dialyzer, [
+    {warnings, [no_return, unmatched_returns, error_handling, underspecs]},
+    {get_warnings, true},
+    {plt_apps, top_level_deps},
+    {plt_extra_apps, []},
+    {plt_location, local},
+    {base_plt_apps, [erts, kernel, stdlib, runtime_tools, syntax_tools]},
+    {base_plt_location, "_build/global_plt"}
+]}.
