Properly format and generate the docs (#38)

--- a/rebar.config
+++ b/rebar.config
@@ -27,3 +27,5 @@
     {base_plt_apps, [erts, kernel, stdlib, runtime_tools, syntax_tools]},
     {base_plt_location, "_build/global_plt"}
 ]}.
+
+{edoc_opts, [{todo, true}, {overview, "priv/overview.edoc"}]}.
