Fixes #49: Add files parameter to rebar.config (#50)

--- a/test_app/rebar.config
+++ b/test_app/rebar.config
@@ -18,4 +18,4 @@
 
 {plugins, [{rebar3_format, {git, "git@github.com:SemanticSugar/rebar3_format.git", {branch, "master"}}}]}.
 
-{format, [{dummy, option}]}.
+{format, [{files, ["src/*.erl", "include/*.hrl"]}, {dummy, option}]}.
