Implement rebar3 test and remove the now unneeded Makefile

--- a/rebar.config
+++ b/rebar.config
@@ -29,3 +29,9 @@
 ]}.
 
 {edoc_opts, [{todo, true}, {overview, "priv/overview.edoc"}]}.
+
+{cover_enabled, true}.
+
+{cover_opts, [verbose]}.
+
+{alias, [{test, [lint, dialyzer, ct, cover]}]}.
