--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ notifications:
 script:
   - rebar3 --version
   - erl -version
-  - make test
+  - rebar3 dialyzer || true # to generate the PLT :(
+  - rebar3 test
