I reached 90% already… getting closer

--- a/test_app/rebar.config
+++ b/test_app/rebar.config
@@ -16,6 +16,6 @@
 
 {deps, []}.
 
-{plugins, [{rebar3_format, {git, "git@github.com:AdRoll/rebar3_format.git", {branch, "master"}}}]}.
+{plugins, [rebar3_format]}.
 
 {format, [{files, ["src/*.erl", "include/*.hrl"]}, {dummy, option}]}.
