Format the formatter using the formatter… formatception

--- a/rebar.config
+++ b/rebar.config
@@ -14,6 +14,8 @@
     debug_info
 ]}.
 
+{minimum_otp_vsn, "21"}.
+
 {deps, []}.
 
 {plugins, [rebar3_lint, rebar3_hex]}.
@@ -35,3 +37,5 @@
 {cover_opts, [verbose]}.
 
 {alias, [{test, [lint, dialyzer, ct, cover]}]}.
+
+{post_hooks, [{compile, "escript scripts/format"}]}.
