Scripts should be in priv so they can be published to hex.pm

--- a/rebar.config
+++ b/rebar.config
@@ -38,4 +38,4 @@
 
 {alias, [{test, [lint, dialyzer, ct, cover]}]}.
 
-{post_hooks, [{compile, "escript scripts/format"}]}.
+{post_hooks, [{compile, "escript priv/scripts/format"}]}.
