--- a/rebar.config
+++ b/rebar.config
@@ -16,7 +16,9 @@
 
 {minimum_otp_vsn, "21"}.
 
-{deps, []}.
+{deps, [
+    {katana_code, {git, "git@github.com:inaka/katana-code.git", {branch, "master"}}}
+]}.
 
 {plugins, [rebar3_lint, rebar3_hex]}.
 
@@ -38,4 +40,4 @@
 
 {alias, [{test, [lint, dialyzer, ct, cover]}]}.
 
-{post_hooks, [{compile, "escript priv/scripts/format"}]}.
+% {post_hooks, [{compile, "escript priv/scripts/format"}]}.
