uncomment post_hooks

--- a/rebar.config
+++ b/rebar.config
@@ -40,4 +40,4 @@
 
 {alias, [{test, [lint, dialyzer, ct, cover]}]}.
 
-% {post_hooks, [{compile, "escript priv/scripts/format"}]}.
+{post_hooks, [{compile, "escript priv/scripts/format"}]}.
