use katana-code from hex.pm

--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,7 @@
 {minimum_otp_vsn, "21"}.
 
 {deps, [
-    {katana_code, {git, "git@github.com:inaka/katana-code.git", {branch, "master"}}}
+    {katana_code, "0.2.0"}
 ]}.
 
 {plugins, [rebar3_lint, rebar3_hex]}.
