Add support for preserving empty lines

--- a/elvis.config
+++ b/elvis.config
@@ -2,6 +2,5 @@
     dirs => ["src"],
     src_dirs => ["src"],
     filter => "*.erl",
-    ruleset => erl_files,
-    ignore => [rebar3_prettypr] %% Copied from OTP, doesn't yet follow our rules
+    ruleset => erl_files
 }}]}].
