Add escript based CLI
Closes #37

--- a/rebar.config
+++ b/rebar.config
@@ -41,3 +41,5 @@
 {alias, [{test, [lint, dialyzer, ct, cover]}]}.
 
 {post_hooks, [{compile, "escript priv/scripts/format"}]}.
+
+{escript_emu_args, "%%! -escript main rebar3_format_cli\n"}.
