Implement rebar3_formatter callback

--- a/test_app/rebar.config
+++ b/test_app/rebar.config
@@ -18,4 +18,4 @@
 
 {plugins, [rebar3_format]}.
 
-{format, [{files, ["src/*.erl", "include/*.hrl"]}, {dummy, option}]}.
+{format, [{files, ["src/*.erl", "include/*.hrl"]}, {options, #{dummy => option}}]}.
