Move options that should only apply to the default_formatter, to it

--- a/elvis.config
+++ b/elvis.config
@@ -2,5 +2,6 @@
     dirs => ["src"],
     src_dirs => ["src"],
     filter => "*.erl",
-    ruleset => erl_files
+    ruleset => erl_files,
+    rules => [{elvis_style, no_tabs, disable}]
 }}]}].
