--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,8 @@
 {minimum_otp_vsn, "21"}.
 
 {deps, [
-    {katana_code, "0.2.1"}
+    {katana_code, "0.2.1"},
+    redbug
 ]}.
 
 {plugins, [rebar3_lint, rebar3_hex]}.
