add support for specifying ignored files in config

--- a/test_app/rebar.config
+++ b/test_app/rebar.config
@@ -18,4 +18,8 @@
 
 {plugins, [rebar3_format]}.
 
-{format, [{files, ["src/*.erl", "include/*.hrl"]}, {options, #{dummy => option}}]}.
+{format, [
+    {files, ["src/*.erl", "include/*.hrl"]},
+    {ignore, ["src/*_ignore.erl", "src/ignored_file_config.erl"]},
+    {options, #{dummy => option}}
+]}.
