[Fix #173] Use/recommend project_plugins, instead of plugins

--- a/rebar.config
+++ b/rebar.config
@@ -18,7 +18,7 @@
 
 {deps, [{katana_code, "0.2.1"}]}.
 
-{plugins, [rebar3_lint, rebar3_hex]}.
+{project_plugins, [rebar3_lint, rebar3_hex]}.
 
 {dialyzer, [
     {warnings, [no_return, unmatched_returns, error_handling, underspecs]},
