--- a/test_app/rebar.config
+++ b/test_app/rebar.config
@@ -16,7 +16,7 @@
 
 {deps, []}.
 
-{plugins, [rebar3_format]}.
+{project_plugins, [rebar3_format]}.
 
 {format, [
     {files, ["src/*.erl", "include/*.hrl"]},
