[#86] Add support for non-module files

--- a/elvis.config
+++ b/elvis.config
@@ -1,7 +1,7 @@
-[{elvis, [{config, #{
-    dirs => ["src"],
-    src_dirs => ["src"],
-    filter => "*.erl",
-    ruleset => erl_files,
-    rules => [{elvis_style, no_tabs, disable}]
-}}]}].
+[{elvis,
+  [{config,
+    #{dirs => ["src"],
+      src_dirs => ["src"],
+      filter => "*.erl",
+      ruleset => erl_files,
+      rules => [{elvis_style, no_tabs, disable}]}}]}].
