--- a/rebar.config
+++ b/rebar.config
@@ -1,34 +1,36 @@
-{erl_opts, [
-    warn_unused_vars,
-    warn_export_all,
-    warn_shadow_vars,
-    warn_unused_import,
-    warn_unused_function,
-    warn_bif_clash,
-    warn_unused_record,
-    warn_deprecated_function,
-    warn_obsolete_guard,
-    strict_validation,
-    warn_export_vars,
-    warn_exported_vars,
-    debug_info
-]}.
+{erl_opts,
+ [warn_unused_vars,
+  warn_export_all,
+  warn_shadow_vars,
+  warn_unused_import,
+  warn_unused_function,
+  warn_bif_clash,
+  warn_unused_record,
+  warn_deprecated_function,
+  warn_obsolete_guard,
+  strict_validation,
+  warn_export_vars,
+  warn_exported_vars,
+  debug_info]}.
 
 {minimum_otp_vsn, "21"}.
 
-{deps, [{katana_code, "1.1.0"}]}.
+{deps,
+ [{katana_code,
+   {git,
+    "git@github.com:inaka/katana-code.git",
+    {branch, "elbrujohalcon.60.parse_non_module_files"}}}]}.
 
 {project_plugins, [rebar3_lint, rebar3_hank, rebar3_hex]}.
 
-{dialyzer, [
-    {warnings, [no_return, unmatched_returns, error_handling, underspecs]},
-    {get_warnings, true},
-    {plt_apps, top_level_deps},
-    {plt_extra_apps, []},
-    {plt_location, local},
-    {base_plt_apps, [erts, kernel, stdlib, runtime_tools, syntax_tools]},
-    {base_plt_location, "_build/global_plt"}
-]}.
+{dialyzer,
+ [{warnings, [no_return, unmatched_returns, error_handling, underspecs]},
+  {get_warnings, true},
+  {plt_apps, top_level_deps},
+  {plt_extra_apps, []},
+  {plt_location, local},
+  {base_plt_apps, [erts, kernel, stdlib, runtime_tools, syntax_tools]},
+  {base_plt_location, "_build/global_plt"}]}.
 
 {edoc_opts, [{todo, true}, {overview, "priv/overview.edoc"}]}.
 
@@ -40,7 +42,4 @@
 
 {post_hooks, [{compile, "escript priv/scripts/format"}]}.
 
-{hank, [{ignore, [
-    "test_app/**/*",
-    {"test/*.erl", unused_ignored_function_params}
-]}]}.
+{hank, [{ignore, ["test_app/**/*", {"test/*.erl", unused_ignored_function_params}]}]}.
