--- a/rebar.config
+++ b/rebar.config
@@ -15,11 +15,7 @@
 
 {minimum_otp_vsn, "21"}.
 
-{deps,
- [{katana_code,
-   {git,
-    "git@github.com:inaka/katana-code.git",
-    {branch, "elbrujohalcon.60.parse_non_module_files"}}}]}.
+{deps, [{katana_code, "1.1.1"}]}.
 
 {project_plugins, [rebar3_lint, rebar3_hank, rebar3_hex]}.
 
