--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,8 @@
 
 {deps, [{katana_code, "1.1.1"}]}.
 
-{project_plugins, [rebar3_lint, rebar3_hank, rebar3_hex]}.
+{project_plugins,
+ [{rebar3_hex, "~> 6.11.0"}, {rebar3_lint, "~> 0.4.0"}, {rebar3_hank, "~> 0.3.0"}]}.
 
 {dialyzer,
  [{warnings, [no_return, unmatched_returns, error_handling, underspecs]},
