--- a/rebar.config
+++ b/rebar.config
@@ -18,7 +18,7 @@
 {deps, [{katana_code, "1.1.1"}]}.
 
 {project_plugins,
- [{rebar3_hex, "~> 6.11.0"}, {rebar3_lint, "~> 0.4.0"}, {rebar3_hank, "~> 0.3.0"}]}.
+ [{rebar3_hex, "~> 6.11.0"}, {rebar3_lint, "~> 0.4.0"}, {rebar3_hank, "~> 0.4.0"}]}.
 
 {dialyzer,
  [{warnings, [no_return, unmatched_returns, error_handling, underspecs]},
@@ -39,4 +39,4 @@
 
 {post_hooks, [{compile, "escript priv/scripts/format"}]}.
 
-{hank, [{ignore, ["test_app/**/*", {"test/*.erl", unnecessary_function_arguments}]}]}.
+{hank, [{ignore, ["test_app/**/*"]}]}.
