Thanks to erlang-ls, I found that we were using elvis incorrectly in this project

--- a/elvis.config
+++ b/elvis.config
@@ -1,7 +1,6 @@
 [{elvis,
   [{config,
-    #{dirs => ["src"],
-      src_dirs => ["src"],
+    #{dirs => ["src/**"],
       filter => "*.erl",
       ruleset => erl_files,
       rules => [{elvis_style, no_tabs, disable}]}}]}].
