--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -20,5 +20,7 @@ jobs:
       run: rebar3 --version
     - name: Compile
       run: rebar3 compile
-    - name: Run tests and verifications
-      run: rebar3 dialyzer || rebar3 test
+    - name: Run dialyzer
+      run: rebar3 dialyzer || true # to generate the PLT :(
+    - name: Run tests
+      run: rebar3 test
