--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -16,11 +16,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: erlef/setup-beam@v1
+      with:
+        otp-version: ${{matrix.otp_vsn}}
+        rebar3-version: '3.16.1'
     - name: Check rebar3 version
       run: rebar3 --version
     - name: Compile
       run: rebar3 compile
-    - name: Run dialyzer
+    - name: Generate dialyzer PLT
       run: rebar3 dialyzer || true # to generate the PLT :(
     - name: Run tests
       run: rebar3 test
