--- a/rebar.config
+++ b/rebar.config
@@ -1,33 +1,42 @@
-{erl_opts,[warn_unused_vars,warn_export_all,warn_shadow_vars,
-           warn_unused_import,warn_unused_function,warn_bif_clash,
-           warn_unused_record,warn_deprecated_function,warn_obsolete_guard,
-           strict_validation,warn_export_vars,warn_exported_vars,debug_info]}.
+{erl_opts,
+ [warn_unused_vars,
+  warn_export_all,
+  warn_shadow_vars,
+  warn_unused_import,
+  warn_unused_function,
+  warn_bif_clash,
+  warn_unused_record,
+  warn_deprecated_function,
+  warn_obsolete_guard,
+  strict_validation,
+  warn_export_vars,
+  warn_exported_vars,
+  debug_info]}.
 
-{minimum_otp_vsn,"21"}.
+{minimum_otp_vsn, "21"}.
 
-{deps,[{katana_code,"1.1.2"}]}.
+{deps, [{katana_code, "1.1.2"}]}.
 
-{project_plugins,[{rebar3_hex,"~> 6.11.5"},
-                  {rebar3_lint,"~> 0.4.0"},
-                  {rebar3_hank,"~> 1.1.2"}]}.
+{project_plugins,
+ [{rebar3_hex, "~> 6.11.5"}, {rebar3_lint, "~> 0.4.0"}, {rebar3_hank, "~> 1.1.2"}]}.
 
-{dialyzer,[{warnings,[no_return,unmatched_returns,error_handling,underspecs]},
-           {get_warnings,true},
-           {plt_apps,top_level_deps},
-           {plt_extra_apps,[]},
-           {plt_location,local},
-           {base_plt_apps,[erts,kernel,stdlib,runtime_tools,syntax_tools]},
-           {base_plt_location,"_build/global_plt"}]}.
+{dialyzer,
+ [{warnings, [no_return, unmatched_returns, error_handling, underspecs]},
+  {get_warnings, true},
+  {plt_apps, top_level_deps},
+  {plt_extra_apps, []},
+  {plt_location, local},
+  {base_plt_apps, [erts, kernel, stdlib, runtime_tools, syntax_tools]},
+  {base_plt_location, "_build/global_plt"}]}.
 
-{edoc_opts,[{todo,true},{overview,"priv/overview.edoc"}]}.
+{edoc_opts, [{todo, true}, {overview, "priv/overview.edoc"}]}.
 
-{cover_enabled,true}.
+{cover_enabled, true}.
 
-{cover_opts,[verbose]}.
+{cover_opts, [verbose]}.
 
-{alias,[{test,[lint,hank,dialyzer,ct,cover]}]}.
+{alias, [{test, [lint, hank, dialyzer, ct, cover]}, {format, [compile]}]}.
 
-{post_hooks,[{compile,"escript priv/scripts/format"}]}.
+{post_hooks, [{compile, "escript priv/scripts/format"}]}.
 
-{hank,[{ignore,["test_app/**/*"]}]}.
-
+{hank, [{ignore, ["test_app/**/*"]}]}.
