--- a/elvis.config
+++ b/elvis.config
@@ -2,5 +2,4 @@
   [{config,
     #{dirs => ["src/**"],
       filter => "*.erl",
-      ruleset => erl_files,
-      rules => [{elvis_style, no_tabs, disable}]}}]}].
+      ruleset => erl_files}}]}].
