--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -10,17 +10,23 @@ jobs:
 
     strategy:
       matrix:
-        otp: [21.3, 22.3, 23.3]
+        otp: [21, 22, 23, 24]
 
     steps:
     - uses: actions/checkout@v2
     - uses: erlef/setup-beam@v1
       with:
         otp-version: ${{matrix.otp}}
-        rebar3-version: '3.15.2'
-    - name: Compile
-      run: rebar3 compile
-    - name: Generate dialyzer PLT
-      run: rebar3 dialyzer || true # to generate the PLT :(
+        rebar3-version: '3.16'
+    - name: Restore _build
+      uses: actions/cache@v2
+      with:
+        path: _build
+        key: _build-cache-for-os-${{runner.os}}-otp-${{steps.setup-beam.outputs.otp-version}}-rebar3-${{steps.setup-beam.outputs.rebar3-version}}-hash-${{hashFiles('rebar.lock')}}
+    - name: Restore rebar3's cache
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/rebar3
+        key: rebar3-cache-for-os-${{runner.os}}-otp-${{steps.setup-beam.outputs.otp-version}}-rebar3-${{steps.setup-beam.outputs.rebar3-version}}-hash-${{hashFiles('rebar.lock')}}
     - name: Run tests
       run: rebar3 test
