--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        otp: [21, 22, 23, 24]
+        otp: [22, 23, 24]
 
     steps:
     - uses: actions/checkout@v2
