--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,8 @@
 
 {deps, [{katana_code, "1.1.2"}]}.
 
-{project_plugins, [rebar3_hex, rebar3_lint, rebar3_hank]}.
+{project_plugins,
+ [{rebar3_hex, "~> 6.11.6"}, {rebar3_lint, "~> 0.4.1"}, {rebar3_hank, "~> 1.1.3"}]}.
 
 {dialyzer, [{warnings, [no_return, unmatched_returns, error_handling, underspecs]}]}.
 
