--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -10,14 +10,19 @@ jobs:
 
     strategy:
       matrix:
-        otp: [21.3, 22.3, 23.3]
+        otp: ['22.3', '23.3']
+        rebar: ['3.16.1']
+        include:
+        - otp: '21.3'
+          rebar: '3.15.2'
 
     steps:
     - uses: actions/checkout@v2
     - uses: erlef/setup-beam@v1
+      id: setup-beam
       with:
         otp-version: ${{matrix.otp}}
-        rebar3-version: '3.15.2'
+        rebar3-version: ${{matrix.rebar}}
     - name: Restore _build
       uses: actions/cache@v2
       with:
@@ -28,5 +33,9 @@ jobs:
       with:
         path: ~/.cache/rebar3
         key: rebar3-cache-for-os-${{runner.os}}-otp-${{steps.setup-beam.outputs.otp-version}}-rebar3-${{steps.setup-beam.outputs.rebar3-version}}-hash-${{hashFiles('rebar.lock')}}
-    - name: Run tests
+    - name: Compile
+      run: rebar3 compile
+    - name: Format check
+      run: rebar3 format --verify
+    - name: Run tests and verifications
       run: rebar3 test
