--- a/rebar.config
+++ b/rebar.config
@@ -36,7 +36,7 @@
   {files, ["src/**/*.?rl", "src/*.app.src", "test/*.?rl"]},
   {additional_dictionaries, ["nextroll.dict", "test.dict"]}]}.
 
-{alias, [{test, [lint, hank, dialyzer, ct, cover]}, {format, [compile]}]}.
+{alias, [{test, [lint, spellcheck, hank, dialyzer, ct, cover]}, {format, [compile]}]}.
 
 {post_hooks, [{compile, "escript priv/scripts/format"}]}.
 
