Spellcheck the code using Sheldon (#294)
* Spellcheck the code using Sheldon

* Add to CI

--- a/rebar.config
+++ b/rebar.config
@@ -18,7 +18,10 @@
 {deps, [{katana_code, "1.2.0"}]}.
 
 {project_plugins,
- [{rebar3_hex, "~> 7.0.1"}, {rebar3_lint, "~> 1.0.1"}, {rebar3_hank, "~> 1.2.2"}]}.
+ [{rebar3_hex, "~> 7.0.1"},
+  {rebar3_hank, "~> 1.2.2"},
+  {rebar3_lint, "~> 1.0.1"},
+  {rebar3_sheldon, "~> 0.4.2"}]}.
 
 {dialyzer, [{warnings, [no_return, unmatched_returns, error_handling, underspecs]}]}.
 
@@ -28,8 +31,15 @@
 
 {cover_opts, [verbose]}.
 
-{alias, [{test, [lint, hank, dialyzer, ct, cover]}, {format, [compile]}]}.
+{spellcheck,
+ [{ignore_regex, "([\\=+|(<>#{}/*]+|^\\-|^_|\\d[.]\\d|[a-z][.][a-z]|[?][A-Z])"},
+  {files, ["src/**/*.?rl", "src/*.app.src", "test/*.?rl"]},
+  {additional_dictionaries, ["nextroll.dict", "test.dict"]}]}.
+
+{alias, [{test, [lint, spellcheck, hank, dialyzer, ct, cover]}, {format, [compile]}]}.
 
 {post_hooks, [{compile, "escript priv/scripts/format"}]}.
 
 {hank, [{ignore, ["test_app/**/*"]}]}.
+
+{hex, [{doc, #{provider => edoc}}]}.
