We still want to support OTP22, so we can't treat warnings as erros

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {erl_opts,
- [warn_unused_import, warn_export_vars, warnings_as_errors, verbose, report, debug_info]}.
+ [warn_unused_import, warn_export_vars, verbose, report, debug_info]}.
 
 {minimum_otp_vsn, "21"}.
 
