--- a/rebar.config
+++ b/rebar.config
@@ -1,17 +1,5 @@
 {erl_opts,
- [warn_unused_vars,
-  warn_export_all,
-  warn_shadow_vars,
-  warn_unused_import,
-  warn_unused_function,
-  warn_bif_clash,
-  warn_unused_record,
-  warn_deprecated_function,
-  warn_obsolete_guard,
-  strict_validation,
-  warn_export_vars,
-  warn_exported_vars,
-  debug_info]}.
+ [warn_unused_import, warn_export_vars, verbose, report, debug_info]}.
 
 {minimum_otp_vsn, "21"}.
 
