--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -10,11 +10,8 @@ jobs:
 
     strategy:
       matrix:
-        otp: ['22.3', '23.3']
-        rebar: ['3.16.1']
-        include:
-        - otp: '21.3'
-          rebar: '3.15.2'
+        otp: ['22.3', '23.3', '24.3']
+        rebar: ['3.18.0']
 
     steps:
     - uses: actions/checkout@v2
