--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        otp: ['22.3', '23.3', '24.3']
+        otp: ['23.3', '24.3', '25.0']
         rebar: ['3.18.0']
 
     steps:
@@ -31,4 +31,4 @@ jobs:
         path: ~/.cache/rebar3
         key: rebar3-cache-for-os-${{runner.os}}-otp-${{steps.setup-beam.outputs.otp-version}}-rebar3-${{steps.setup-beam.outputs.rebar3-version}}-hash-${{hashFiles('rebar.lock')}}
     - name: Run tests and verifications
-      run: rebar3 test
+      run: ERL_FLAGS="-enable-feature all" rebar3 test
