--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,15 @@
 {erl_opts, [warn_unused_import, warn_export_vars, verbose, report, debug_info]}.
 
-{minimum_otp_vsn, "21"}.
+{minimum_otp_vsn, "23"}.
 
-{deps, [{katana_code, "1.2.0"}]}.
+{deps, [{katana_code, "~> 2.0.0"}]}.
+
+{ex_doc,
+ [{source_url, <<"https://github.com/AdRoll/rebar3_format">>},
+  {extras, [<<"README.md">>, <<"LICENSE">>]},
+  {main, <<"readme">>}]}.
+
+{hex, [{doc, #{provider => ex_doc}}]}.
 
 {project_plugins,
  [{rebar3_hex, "~> 7.0.1"},
@@ -23,7 +30,9 @@
   {files, ["src/**/*.?rl", "src/*.app.src", "test/*.?rl"]},
   {additional_dictionaries, ["nextroll.dict", "test.dict"]}]}.
 
-{alias, [{test, [lint, spellcheck, hank, dialyzer, ct, cover]}, {format, [compile]}]}.
+{alias,
+ [{test, [spellcheck, lint, hank, dialyzer, {ct, "--verbose"}, cover, edoc]},
+  {format, [compile]}]}.
 
 {post_hooks, [{compile, "escript priv/scripts/format"}]}.
 
