--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,8 @@
  [{rebar3_hex, "~> 7.0.1"},
   {rebar3_hank, "~> 1.2.2"},
   {rebar3_lint, "~> 1.0.2"},
-  {rebar3_sheldon, "~> 0.4.2"}]}.
+  {rebar3_sheldon, "~> 0.4.2"},
+  {rebar3_ex_doc, "~> 0.2.9"}]}.
 
 {dialyzer, [{warnings, [no_return, unmatched_returns, error_handling, underspecs]}]}.
 
@@ -37,5 +38,3 @@
 {post_hooks, [{compile, "escript priv/scripts/format"}]}.
 
 {hank, [{ignore, ["test_app/**/*"]}]}.
-
-{hex, [{doc, #{provider => edoc}}]}.
