--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -2,6 +2,9 @@ name: Erlang CI
 
 on: [push, pull_request]
 
+env:
+  ERL_FLAGS: "-enable-feature all"
+
 jobs:
 
   build:
@@ -10,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        otp: ['23.3', '24.3', '25.0']
+        otp: ['23.3', '24.3', '25.2.1']
         rebar: ['3.20.0']
 
     steps:
@@ -31,4 +34,4 @@ jobs:
         path: ~/.cache/rebar3
         key: rebar3-cache-for-os-${{runner.os}}-otp-${{steps.setup-beam.outputs.otp-version}}-rebar3-${{steps.setup-beam.outputs.rebar3-version}}-hash-${{hashFiles('rebar.lock')}}
     - name: Run tests and verifications
-      run: ERL_FLAGS="-enable-feature all" rebar3 test
+      run: rebar3 test
