--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        otp: ['23.3', '24.3', '25.2.1']
+        otp: ['24.3', '25.2.1']
         rebar: ['3.20.0']
 
     steps:
