[update-deps] Switch from edoc to ex_doc in test alias

--- a/rebar.config
+++ b/rebar.config
@@ -32,7 +32,7 @@
   {additional_dictionaries, ["nextroll.dict", "test.dict"]}]}.
 
 {alias,
- [{test, [spellcheck, lint, hank, dialyzer, {ct, "--verbose"}, cover, edoc]},
+ [{test, [spellcheck, lint, hank, dialyzer, {ct, "--verbose"}, cover, ex_doc]},
   {format, [compile]}]}.
 
 {post_hooks, [{compile, "escript priv/scripts/format"}]}.
