--- a/rebar.config
+++ b/rebar.config
@@ -18,7 +18,8 @@
   {rebar3_sheldon, "~> 0.4.3"},
   {rebar3_ex_doc, "~> 0.2.23"}]}.
 
-{dialyzer, [{warnings, [no_return, unmatched_returns, error_handling, underspecs]}]}.
+{dialyzer,
+ [{warnings, [no_unknown, no_return, unmatched_returns, error_handling, underspecs]}]}.
 
 {edoc_opts, [{todo, true}, {overview, "priv/overview.edoc"}]}.
 
