--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,8 @@
 {erl_opts, [warn_unused_import, warn_export_vars, verbose, report, debug_info]}.
 
-{minimum_otp_vsn, "24"}.
+{minimum_otp_vsn, "25"}.
 
-{deps, [{katana_code, "~> 2.1.0"}]}.
+{deps, [{katana_code, "~> 2.2.0"}]}.
 
 {ex_doc,
  [{source_url, <<"https://github.com/AdRoll/rebar3_format">>},
@@ -13,12 +13,13 @@
 
 {project_plugins,
  [{rebar3_hex, "~> 7.0.8"},
-  {rebar3_hank, "~> 1.4.0"},
-  {rebar3_lint, "~> 3.2.5"},
+  {rebar3_hank, "~> 1.4.1"},
+  {rebar3_lint, "~> 3.2.6"},
   {rebar3_sheldon, "~> 0.4.3"},
-  {rebar3_ex_doc, "~> 0.2.23"}]}.
+  {rebar3_ex_doc, "~> 0.2.24"}]}.
 
-{dialyzer, [{warnings, [no_return, unmatched_returns, error_handling, underspecs]}]}.
+{dialyzer,
+ [{warnings, [no_unknown, no_return, unmatched_returns, error_handling, underspecs]}]}.
 
 {edoc_opts, [{todo, true}, {overview, "priv/overview.edoc"}]}.
 
