--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -9,11 +9,11 @@ jobs:
 
   build:
 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
 
     strategy:
       matrix:
-        otp: ['25', '26']
+        otp: ['25', '26', '27']
         rebar: ['3.24']
 
     steps:
